2020-12-29-liquibase-docker-maven.markdown

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ruslan Peshchuk - Senior Java Developer
+title: Ruslan Peshchuk - Java Software Engineer
 author: peshrus
 email: peshrus@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
