--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ruslan Peshchuk - Java Software Engineer
 author: peshrus
 email: peshrus@gmail.com
 description: > # this means to ignore newlines until "twitter_username:"
-  "...one should accept the truth from whatever source it proceeds." -Maimonides
+  "Accept the truth from whatever source it comes." -Maimonides
 google_analytics: UA-43167233-4
 # social links
 # twitter_username: jekyllrb
